--- a/chapter4.tex
+++ b/chapter4.tex
@@ -311,7 +311,7 @@ The above two definitions, the strong semilattice of semigroups and the semilatt
   \begin{enumerate}
     \item\label{crs-crsandcli-jc-1} $\forall a \in S (\calJ(a) = \calJ(a^2))$;
     \item\label{crs-crsandcli-jc-2} $\forall a, b \in S (\calJ(ab) = \calJ(ba))$;
-    \item\label{crs-crsandcli-jc-3} $\calJ$ is a congruence, thus $(S/\calJ, \ast)$ is a semigroup, where $\calJ(a) \ast \calJ(b) := \calJ(ab)$.
+    \item\label{crs-crsandcli-jc-3} $\calJ$ is a congruence, thus $(S/\calJ, \ast)$ is a semigroup, where $\calJ(a) \ast \calJ(b) := \calJ(ab)$;
     \item\label{crs-crsandcli-jc-4} $\calJ(a) \leq \calJ(b) \Leftrightarrow \calJ(a) = \calJ(a)\ast \calJ(b)$, thus $(\calJ, \leq, \land)$ consists a semilattice, where $\calJ(a)\land \calJ(b) := \inf \{ \calJ(a), \calJ(b) \} = \calJ(a)\ast \calJ(b)$;
     \item\label{crs-crsandcli-jc-5} $S$ is a semilattice of CSSs.
   \end{enumerate}
@@ -344,7 +344,7 @@ The above two definitions, the strong semilattice of semigroups and the semilatt
   \]
   it's clear that $\calJ(fx) \geq \calJ(fxayf) = \calJ(b) = A$, and similarly all of $yf, eu, ve$ are in $A$. The equations above mean that $a \calJ^A b$, thus $\calJ^A = A^2$.
 
-  To show that $A$ is CR, observe that any $a \in A$ lies in a group $\calH(a) \subset \calJ(p)$.
+  To show $A$ is CR, observe that any $a \in A$ lies in a group $\calH(a) \subset \calJ(p)$.
 
   To complete this proof, define the mapping $\idd: S/\calJ \to S/\calJ: \alpha \mapsto \alpha$, where $(S/\calJ, \leq, \land)$ can be viewed as a semilattice. On the other hand $S$ is the disjoint union $\bigsqcup_{\alpha \in S/\calJ} \alpha$; and for any $\calJ$-calsses $\alpha$ and $\beta$, $\alpha \cdot \beta \subset \alpha \land \beta$; thus, $S$ becomes a semilattice of CSSs.
 \end{proof}
@@ -393,11 +393,11 @@ The above two definitions, the strong semilattice of semigroups and the semilatt
 \end{theorem}
 
 \begin{proof}
-  \ref{crs-crsandcli-clis-1} $\Rightarrow$ \ref{crs-crsandcli-clis-2} Let $S$ be a Clifford semigroup, by \ref{crs-crsandcli-jc-5} of Proposition \ref{prop:crs-crsandcli-jc}, we first obtain that $S$ is a semilattice of CSSs. Consider a particular CSS $S_i$. Since every idempotent $e = ee'$, the idempotents in $S_i$ are commutative. By Proposition \ref{prop:crgrp-crgrp-idmispri}, every idempotent in $S_i$ is primitive, then for any $e, f \in \idm S_i$,
+  \ref{crs-crsandcli-clis-1} $\Rightarrow$ \ref{crs-crsandcli-clis-2} Let $S$ be a Clifford semigroup, by \ref{crs-crsandcli-jc-5} of Proposition \ref{prop:crs-crsandcli-jc}, we first obtain that $S$ is a semilattice of CSSs. Consider a particular CSS $S_i$. Since every idempotent $e = ee'$, the idempotents in $S_i$ are commutative. By Proposition \ref{prop:crs-crsandcli-prop4}, every idempotent in $S_i$ is primitive, then for any $e, f \in \idm S_i$,
   \[
     e(ef) = ef(e) = ef, f(ef) = (ef)f = ef,
   \]
-  which means that $ef \leq e$ and $ef \leq f$. Since  both $e, f$ are primitive, $e = ef = f$, that is, $S_i$ contains only one idempotent. According to the property that any $\calH$-class of the CSS $S_i$ is a group, which naturally contains an idempotent, so we may deduce that $S_i$ has only one $\calH$-class, implying $S_i$ is a group.
+  which means $ef \leq e$ and $ef \leq f$. Since  both $e, f$ are primitive, $e = ef = f$, that is, $S_i$ contains only one idempotent. According to the property that any $\calH$-class of the CSS $S_i$ is a group, which naturally contains an idempotent, so we may deduce that $S_i$ is a group on account of $S_i$ has only one $\calH$-class.
 
   \ref{crs-crsandcli-clis-2} $\Rightarrow$ \ref{crs-crsandcli-clis-3} This statement essentially says that the mapping $\alpha: I \to \Ob(\cate{Grp})$ within a semilattice of groups can be used to construct a functor. As will be evident in the proof below, the well-behaved properties of groups make this upgrade straightforward.  We denote the element in $\alpha(i)$ by $x_i$. Observe that $\left(\bigsqcup_{i \in I}\alpha(i), \cdot\right)$ as a semilattice of groups, satisfies $\alpha(i) \cdot \alpha(j) \subset \alpha(i\land j)$ and every $(\alpha(i), \cdot)$ is the subsemigroup of $\left(\bigsqcup_{i \in I}\alpha(i), \cdot\right)$.
   
@@ -408,7 +408,7 @@ The above two definitions, the strong semilattice of semigroups and the semilatt
     \item for any $i \to j \to k$ within $I$, $\alpha_{j \to k}\circ \alpha_{i \to j} = \alpha_{i \to k}$;
     \item for any $i, j \in \Ob(I)$, the multiplication that presupposed on $S$ coincides with the multiplication defined as follows,
     \[
-      x_i \bullet y_j = \alpha_{i \to i\land j}(x) \cdot \alpha_{j \to i\land j}(y).
+      x_i \ast y_j = \alpha_{i \to i\land j}(x) \cdot \alpha_{j \to i\land j}(y).
     \]
   \end{itemize}
   See \cite[Theorem 4.2.1]{John-FundSmg} for details.
@@ -419,12 +419,19 @@ The above two definitions, the strong semilattice of semigroups and the semilatt
   \]
   thus, $\idm S \subset Z(S)$.
 
-  \ref{crs-crsandcli-clis-4} $\Rightarrow$ \ref{crs-crsandcli-clis-5}  Suppose $e \calD f$, by (...) there exists $a$ and its inverse $a'$ such that $a'a = f, aa'=e$. So we have
+  \ref{crs-crsandcli-clis-4} $\Rightarrow$ \ref{crs-crsandcli-clis-5}  Suppose $e \calD f$, by \ref{green-rs-props2-4} of Proposition \ref{prop:green-rs-props2} there exists $a$ and its inverse $a'$ such that $a'a = f, aa'=e$. So we have
   \[
     e = e^2 = aa'aa' = afa' = faa' = a'aaa' = a'ae = a'ea = a'aa'a = f^2 = f.
   \]
 
-  \ref{crs-crsandcli-clis-5} $\Rightarrow$ \ref{crs-crsandcli-clis-1} If a $\calD$-calss contains a single idempotent $e$, then $\calD(e)$ is regular, and for any $a \in \calD(e)$ there exists $x$ such that  $axa = a$. It follows that $ax$ is an idempotent belongs to $\calR(a)$, then so it equals to $e$; similarly $xa = e$. From $ea = a$ and $ae = a$, we obtain $a \calH e$, thus $\calD(e) = \calH(e)$. 
+  \ref{crs-crsandcli-clis-5} $\Rightarrow$ \ref{crs-crsandcli-clis-1} If a $\calD$-calss contains a single idempotent $e$, we assert that $\calD(e)$ is a group. By \ref{green-rs-props1-3} of Proposition \ref{prop:green-rs-props1}, $\calD(e)$ is regular, so for any $a \in \calD(e)$ there exists $x \in S^1$ such that  $axa = a$. It follows that $ax$ is an idempotent belongs to $\calR(a) \subset \calD(e)$, which must coincides with $e$ due to the condition that $e$ is the unique idempotent of $\calD(e)$; similarly $xa = e$. From $ea = a$ and $ae = a$, we obtain $a \calH e$, thus $\calD(e) = \calH(e)$. 
+
+  On account of every element of $S$ lies in a group, it is a CRS, and so is a semilattice of CSSs $S_i$. We assert that every $S_i$ is a group. For every $x, y$ in $S_i$, by \ref{zssandzs-css-props1-6} of Proposition \ref{prop:zssandzs-css-props1}, $xy \in \calR(x) \cap \calL(y)$, and so $x \calD y$, thus $S_i \subset \calD(y)$, which implies $S_i$ is a group as we've established in \ref{crs-crsandcli-clis-1} $\Rightarrow$ \ref{crs-crsandcli-clis-2} on the condition of $S_i$ contains a single idempotent.
+
+  From \ref{crs-crsandcli-clis-2} $\Rightarrow$ \ref{crs-crsandcli-clis-3} we now deduce that $S$ is a strong semilattice of groups. Thus, one can define the operation $(-)'$ on $S$ that sends $x_i$ to its inverse $x_i'$ within the group $S_i$, and it follows easily that for any $x_i, y_j \in S$
+  \[
+    x_i x_i'y_jy_j' = e_i e_j = e_{i\land j} = e_j e_i = y_jy_j'x_ix_i'.
+  \]
 \end{proof}
 
  
